# cthreadingpi

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  test_auto_threading.py
benchmarks/: bench_format.py  bench_usage.py  concurrency_test.py  head_to_head.py  numpy_bench.py  pillow_bench.py  pure_cpu_bench.py  results_cpu.json  results_head_to_head.json  results_numpy.json  results_pillow.json  results_simulated.json  run_all_benchmarks.py  simulated_bench.py  test_basic.py  test_new_features.py  test_pool_map.py
src/cthreading/: __init__.py  _monitoring.cp314t-win_amd64.pyd  _monitoring.pyi  _queue.cp314t-win_amd64.pyd  _queue.pyi  _sync.cp314t-win_amd64.pyd  _sync.pyi  _tasks.cp314t-win_amd64.pyd  _threading.cp314t-win_amd64.pyd  auto.py  contracts.py  cthreading_common.h  governor.py  monitoring.c  monitoring.py  new_auto.py  old_auto.py  sync.c  tasks.py  threading.c
src/cthreading.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cthreadingpi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
